--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script>
-      AOS.init();
+      AOS.init({
+        duration: 900,
+      });
     </script>
   </body>
 </html>
